--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "description": "Личный проект «Шесть городов» от HTML Academy",
   "scripts": {
     "eslint": "eslint src/**/*.js",
-    "test": "npm run eslint"
+    "test": "npm run eslint && jest"
   },
   "devDependencies": {
+    "babel-jest": "24.8.0",
+    "enzyme": "3.10.0",
+    "enzyme-adapter-react-16": "1.14.0",
     "eslint": "5.13.0",
-    "eslint-config-htmlacademy": "0.5.2"
+    "eslint-config-htmlacademy": "0.5.2",
+    "jest": "24.8.0",
+    "react-test-renderer": "16.8.6"
   },
   "engines": {
     "node": "10"
