--- a/package.json
+++ b/package.json
@@ -4627,6 +4627,7 @@
       "resolved": "https://registry.npmjs.org/react-is/-/react-is-16.8.6.tgz",
       "version": "16.8.6"
     },
+    "react-redux": "7.1.0",
     "react-test-renderer": {
       "dev": true,
       "integrity": "sha512-H2srzU5IWYT6cZXof6AhUcx/wEyJddQ8l7cLM/F7gDXYyPr4oq+vCIxJYXVGhId1J706sqziAjuOEjyNkfgoEw==",
@@ -4684,6 +4685,7 @@
       "resolved": "https://registry.npmjs.org/realpath-native/-/realpath-native-1.1.0.tgz",
       "version": "1.1.0"
     },
+    "redux": "4.0.1",
     "reflect.ownkeys": {
       "dev": true,
       "integrity": "sha1-dJrO7H8/34tj+SegSAnpDFwLNGA=",
