--- a/package.json
+++ b/package.json
@@ -678,6 +678,7 @@
       "resolved": "https://registry.npmjs.org/aws4/-/aws4-1.8.0.tgz",
       "version": "1.8.0"
     },
+    "axios": "0.19.0",
     "babel-jest": {
       "dev": true,
       "integrity": "sha512-+5/kaZt4I9efoXzPlZASyK/lN9qdRKmmUav9smVc0ruPQD7IsfucQ87gpOE8mn2jbDuS6M/YOW6n3v9ZoIfgnw==",
@@ -4686,6 +4687,7 @@
       "version": "1.1.0"
     },
     "redux": "4.0.1",
+    "redux-thunk": "2.3.0",
     "reflect.ownkeys": {
       "dev": true,
       "integrity": "sha1-dJrO7H8/34tj+SegSAnpDFwLNGA=",
@@ -5907,5 +5909,8 @@
       "resolved": "https://registry.npmjs.org/yargs-parser/-/yargs-parser-11.1.1.tgz",
       "version": "11.1.1"
     }
+  },
+  "devDependencies": {
+    "axios-mock-adapter": "1.16.0"
   }
 }
